<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page_ajout_recette">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="Nom de la recette . . ."
        android:textColor="#47A23F"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="90dp"
        android:paddingTop="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/custom_button_add_recette"
        android:fontFamily="@font/montserrat"
        android:text="@string/ajouter_votre_image"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#8C958B"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/ingr_dients"
        android:textColor=" #8C958B"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/ajouter_une_tape"
        android:textColor="#8C958B"
        android:textSize="12sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/indiquez_les_tapes_de_pr_paration"
        android:textColor=" #8C958B"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/ajouter_un_ingr_dient"
        android:textColor="#8C958B"
        android:textSize="12sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"/>



</LinearLayout>